# home-api-documents

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/api/app/: launcher.rs  mod.rs  mongo_component.rs
src/api/documents/: mod.rs
src/api/documents/repositories/: documents_repository_mongo.rs  mod.rs
src/api/documents/routes/: hello_world.rs  mod.rs  read_documents_router.rs
src/core/documents/: mod.rs
src/core/documents/entities/: mod.rs
src/core/documents/repositories/: document_repository.rs  mod.rs
src/models/: mod.rs
src/models/shared/errors/: mod.rs
