[package]
name = "home-api-documents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { features = ["json"], version = "0.5.0" }
mongodb = "2.5.0"
dotenv = "0.15.0"
chrono = "0.4.37"
uuid = "1.8.0"
async-trait = "0.1.79"
